<resources>
    <string name="app_name" translatable="false">Athan</string>
    <string name="userConfig" translatable="false">userConfig</string>
    <string name="settings">Settings</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="search_location">Search Location</string>
    <string name="prayers">Prayers</string>
    <string name="calculation_method">Calculation Method</string>
    <string name="juristic_method">Juristic Method</string>
    <string name="prayer_time_adjustment">Prayer Time Adjustment</string>
    <string name="notifications">Notifications</string>
    <string name="prayer_alert">Prayer Alert</string>
    <string name="athan_selection">Athan Selection</string>
    <string name="search_failed_msg">Echec lors de la récupération des données</string>
    <string name="choose_city">Choose a city</string>
    <string name="app_label">Athan</string>
    <string name="search_hint">Search City</string>
    <string name="city_not_found">City not found</string>
    <string name="athan_prefs_key">athanPrefs</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="athan_switche_beep">Athan call set to alarm for</string>
    <string name="athan_switched_off">Athan call switched OFF for</string>
    <string name="athan_switched_on">Athan call switched ON for</string>
</resources>